syntax = "proto3";
package protobuf;

option java_package= "com.chargingtime.errorcodedetails.proto";
option java_outer_classname= "ErrorCodeDetails";

message ErrorDetails{
  ErrorCode error_code =1;
  string error_message=2;
}

enum ErrorCode{
  UNDEFINED = 0;
  VALIDATION_ERROR = 1;
  DB_UNAVAILABLE = 2;
  DATA_NOT_PRESENT=3;
  INTERNAL_SERVER_ERROR=4;
  UNAUTHORIZED=5;
  BAD_REQUEST_EXCEPTION=6;
}